# C-Lectures

./: CMakeLists.txt  main.c
lecture-1/: CMakeLists.txt
lecture-2/: CMakeLists.txt  begin8.c  boolean1.c  main.c
lecture-3/: CMakeLists.txt  case1.c  for1.c  if1.c  main.c  recur3.c  series1.c
lecture-4/: CMakeLists.txt  array1.c  main.c
lecture-5/: CMakeLists.txt  function-pointers.c  main.c
lecture-6/: CMakeLists.txt  sum.c  sum.h
lecture-6/app/: CMakeLists.txt  main.c
lecture-6/libio/: CMakeLists.txt
lecture-6/libio/include/: io.h
lecture-6/libio/src/: io.c
lecture-7/: CMakeLists.txt  main.c  vector.c  vector.h
lecture-8/: CMakeLists.txt  image.c  image.h  main-winapi.c  main.c  performance.c
lecture-9/: CMakeLists.txt  main.c
