cmake_minimum_required(VERSION 3.0)

project(Lectures C)

# Включение высокого уровня предупреждений
if(MSVC)
    if(CMAKE_C_FLAGS MATCHES "/W[0-4]")
        string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
    else()
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4")
    endif()
    add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
    add_compile_options(/experimental:external /external:anglebrackets /external:W0)
elseif(CMAKE_COMPILER_IS_GNUCC)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wconversion -Wextra -Wpedantic")
endif()

add_subdirectory("lecture-1")
add_subdirectory("lecture-2")
add_subdirectory("lecture-3")
add_subdirectory("lecture-4")
add_subdirectory("lecture-5")
add_subdirectory("lecture-6")
add_subdirectory("lecture-7")
add_subdirectory("lecture-8")
add_subdirectory("lecture-9")
